fix input text overlap with emoji icon

--- a/client/stylesheets/assistants/customers.scss
+++ b/client/stylesheets/assistants/customers.scss
@@ -176,6 +176,9 @@
             padding: 8px 0px;
           }
         }
+        textarea {
+          padding-right: 30px;
+        }
         button.submit {
           width: 60px;
         }
